# renewable-forecasting-pipeline

./: .env  .env.example  .gitignore  Evaluar metricas.txt  README.md  bootstrap_repo.py  hacer txt los .py  proyecto_codigo.txt  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docker/: Dockerfile
models/: current
models/Scrap/xgb_20250705_1117/: compare_baseline.csv
models/baseline/: baseline_persist24.csv
models/lgbm_20250708_2142/: report.html
models/lgbm_20250708_2142/demand/: best_params.json
models/lgbm_20250708_2142/solar_pv/: best_params.json
models/mlp_20250709_1100/: report.html
models/xgb_20250708_2015/: compare_baseline.csv  report.html
models/xgb_20250711_1308/: report.html
scripts/: check_nc_integrity.py  convert_hres_to_nc.py  download_hres.py  inspect_nc.py  make_splits.py  plot_real_generation.py  show_grid.py  validate_holdout.py  visualize_forecast.py
src/analysis/: compare_runs.py  error_breakdown.py  shap_local.py  shap_summary.py
src/data/: cds_client.py  check_raw_integrity.py  debug_esios.py  describe_dataset.py  esios_client.py  interp_time.py  make_dataset.py  merge_all.py  update_dataset.py
src/features/: __init__.py  build_features.py
src/models/: baseline.py  evaluate.py  train_lgbm.py  train_mlp.py  train_xgb.py  train_xgb_optuna.py
src/prediction/: predict.py
src/renewable_forecasting_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: capacity.py  logger.py  numpy_patch.py  yaml_cfg.py
tests/: test_esios_client.py  test_split.py
(+1659 files in other folders)
